// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/docker/common dockerDf 1`] = `
[
  [
    "docker",
    [
      "system",
      "df",
    ],
  ],
]
`;

exports[`utils/docker/common dockerPrune 1`] = `
[
  [
    "docker",
    [
      "system",
      "prune",
      "--force",
      "--all",
    ],
  ],
]
`;

exports[`utils/docker/common dockerRun 1`] = `
[
  [
    "docker",
    [
      "run",
      "--rm",
    ],
  ],
]
`;
